--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -1,2 +1,18 @@
-%h1 New Restaurants form
-%p part of another feature
+.row
+  .column-md-12
+    %h1 New Restaurant form
+    = form_for @restaurant do |f|
+
+      = f.label :name
+      %br/
+      = f.text_field :name
+      %br/
+      = f.label :description
+      %br/
+      = f.text_area :description
+      %br/
+      = f.label :address
+      %br/
+      = f.text_field :address
+
+      = f.submit 'Create', id: 'create'
