--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -11,8 +11,16 @@
       %br/
       = f.text_area :description
       %br/
-      = f.label :address
+      = f.label :street
       %br/
-      = f.text_field :address
+      = f.text_field :street
+      %br/
+      = f.label :zipcode
+      %br/
+      = f.text_field :zipcode
+      %br/
+      = f.label :town
+      %br/
+      = f.text_field :town
 
       = f.submit 'Create', id: 'create'
