Created link to edit page, but no id key

--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -2,5 +2,4 @@ here is the show for restaurants
 
 = @restaurant.name
 
-
-%button{:type => "button"} Edit
+%button{:onclick => "window.location.href='restaurants#edit'"} Edit
