--- a/app/views/restaurants/edit.html.haml
+++ b/app/views/restaurants/edit.html.haml
@@ -6,16 +6,4 @@ this is the edit page for
   .column-md-12
     %h1 Edit restaurant: #{@restaurant.name}
   .col-md-8.col-xs-12
-    = form_for @restaurant, action: :update, class: 'form-group'  do |f|
-      = f.label :name, 'Edit name'
-      = f.text_field :name, id: 'Name', class: 'form-control'
-      = f.label :description
-      = f.text_area :description, class: 'form-control'
-      = f.label :street
-      = f.text_field :street, class: 'form-control'
-      = f.label :zipcode
-      = f.text_field :zipcode, class: 'form-control'
-      = f.label :town
-      = f.text_field :town, class: 'form-control'
-      %br/
-      = f.submit 'Update', id: 'create', class: 'btn btn-warning'
+    = render partial: 'form'
