Displaying all restaurant info

--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -1,4 +1,16 @@
 here is the show for restaurants
+%br/
+%br/
 = @restaurant.name
+%br/
+= @restaurant.description
+%br/
+= @restaurant.street
+%br/
+= @restaurant.zipcode
+%br/
+= @restaurant.town
+%br/
+%br/
 
 = link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-success"
