--- a/app/views/restaurants/_form.html.haml
+++ b/app/views/restaurants/_form.html.haml
@@ -4,7 +4,7 @@
   = f.label :description
   = f.text_area :description, class: 'form-control', value: @restaurant.description
   = f.label :category
-  = f.select :category, options_for_select(Restaurant::CATEGORIES), include_blank: 'Select category', class: 'form-control'
+  = f.select :category, options_for_select(Restaurant::CATEGORIES), class: 'form-control'
   = f.label :street
   = f.text_field :street, class: 'form-control', value: @restaurant.street
   = f.label :zipcode
